--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<testcontainers.version>1.21.0</testcontainers.version>
+		<testcontainers-jooq-codegen-maven-plugin.version>0.0.4</testcontainers-jooq-codegen-maven-plugin.version>
+
+		<postgresql.version>42.6.0</postgresql.version>
+		<!--
+		The following newer version of the PostgreSQL JDBC driver does not work with the
+		testcontainers-jooq-codegen-maven-plugin.
+		The plugin needs to upgrade it's version of jooq
+		-->
+		<!-- <postgresql.version>42.7.5</postgresql.version>--> <!--DOES NOT WORK -->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -78,15 +88,93 @@
 			<artifactId>postgresql</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.testcontainers</groupId>
+				<artifactId>testcontainers-jooq-codegen-maven-plugin</artifactId>
+				<version>${testcontainers-jooq-codegen-maven-plugin.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.testcontainers</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${testcontainers.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${postgresql.version}</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<id>generate-jooq-sources</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<phase>generate-sources</phase>
+						<configuration>
+							<database>
+								<type>POSTGRES</type>
+								<containerImage>postgres:15.3-alpine</containerImage>
+							</database>
+							<flyway>
+								<locations>
+									filesystem:src/main/resources/db/migration
+								</locations>
+							</flyway>
+							<jooq>
+								<generator>
+									<database>
+										<includes>.*</includes>
+										<excludes>flyway_schema_history</excludes>
+										<inputSchema>public</inputSchema>
+									</database>
+									<target>
+										<packageName>com.testcontainers.demo.jooq</packageName>
+										<directory>target/generated-sources/jooq</directory>
+									</target>
+								</generator>
+							</jooq>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
+
 	</build>
 
 </project>
